# dormitory-item-assistant

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  app.py  btc_sas_dca_plan_2026-06-06.md  build_interview_guide_docx.py  interview_owner_execution_guide.docx  interview_owner_tasks.md  pyproject.toml  requirements.txt  salary_predictor.py  temp_content.txt
.github/workflows/: tests.yml
data/feedback/: feedback_retrain_candidates.csv  user_feedback_log.csv
data/manual/: expanded_blueprints.csv  holdout_exclusion_terms.csv
data/processed/: all_samples.csv  expanded_samples.csv  real_samples.csv  test_real_holdout.csv  train.csv
data/raw/: interview_form_desensitized.xlsx
docs/: ai_usage_record.md  demo_video_script.md  project_introduction.md  real_sample_collection_protocol.md
models/: category_model.joblib  model_metadata.json  risk_model.joblib
reports/: model_eval.md  test_cases.md  user_delivery_record.md  user_trial_export.csv  user_trial_export.md
src/: __init__.py  data_prepare.py  external_data.py  features.py  import_real_samples.py  merge_feedback.py  predict.py  train_models.py  validators.py
src/ui/: styles.py  utils.py
src/ui/components/: sidebar.py
src/ui/pages/: batch_mode.py  docs_page.py  single_mode.py
tests/: test_batch_and_feedback.py  test_external_data.py  test_features.py  test_model_metadata.py  test_predict.py  test_real_sample_import.py  test_ui_model_cache.py  test_ui_scroll_focus.py
