[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dormitory-item-assistant"
version = "0.1.0"
description = "Dormitory daily item classification and status risk assistant."
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.58.0",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "scikit-learn==1.9.0",
    "joblib==1.5.3",
    "openpyxl==3.1.5",
    "altair>=5.0.0",
    "jieba>=0.42.1",
    "pandera>=0.22.0",
    "filelock>=3.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "selenium>=4.20.0",
]

[tool.setuptools.packages.find]
include = ["src*"]
